--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <div>
 	<h1>This is going to be the docbot site yay</h1>
 </div>
+<div>
+	<h2>Killer clinical solutions</h2>
+</div>
 
 </body>
 </html>
